--- a/css/style-raw.css
+++ b/css/style-raw.css
@@ -1,20 +1,20 @@
 /*Estilos gerais*/
 
-html{
+html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-img{
+img {
     display: block;
     max-width: 100%;
 }
 
-p{
+p {
     font-size: 14px;
     line-height: 25px;
 }
 
-.btn{
+.btn {
     border: 3px solid #2bb3c0;
     padding: 10px 20px;
     background: none;
@@ -24,38 +24,47 @@ p{
     text-transform: uppercase;
     color: #2bb3c0;
     transition: all .5s ease;
-    
 }
 
-.btn:hover{
+.btn:hover {
     color: white;
     border-color: white;
 }
 
+.btn.btn-azul {
+    color: #161c2e;
+    border-color: #161c2e;
+}
+
+.btn.btn-azul:hover {
+    color: #2bb3c0;
+    border-color: #2bb3c0;
+}
+
 /*Estilos header*/
 
-.header{
+.header {
     background-color: #161c2e;
     padding: 15px 0;
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 10;
 }
-
 
 .menu {
     text-align: right;
 }
 
-.menu ul li{  
-   display: inline-block;
-   margin-left: 25px;
-   margin-top: 20px;
+.menu ul li {
+    display: inline-block;
+    margin-left: 25px;
+    margin-top: 20px;
 }
 
-.menu ul li a{
+.menu ul li a {
     letter-spacing: .1em;
-   text-transform: uppercase;
+    text-transform: uppercase;
     font-size: 14px;
     line-height: 25px;
     color: white;
@@ -63,15 +72,43 @@ p{
     transition: all .3s ease;
 }
 
-.menu ul li a:hover{
+.menu ul li a:hover {
     color: #2bb3c0;
+}
+
+.subtitulo {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 60px;
+    color: #161c2e;
+}
+
+.subtitulo:after {
+    content: "";
+    width: 50px;
+    height: 3px;
+    background-color: #161c2e;
+    display: block;
+    margin: 8px auto 40px auto;
+}
+
+.subtitulo.subtitulo-azul {
+    color: white;
+}
+
+.subtitulo.subtitulo-azul:after {
+    background-color: white;
 }
 
 /* Introdução */
 
-.introducao{
+.introducao {
     width: 100%;
-    background: url("../img/bg-home.jpg");
+    background: url("../img/bg-home.jpg") no-repeat center;
     text-align: center;
     background-size: cover;
     margin-top: 96px;
@@ -79,17 +116,17 @@ p{
     padding-top: 70px;
 }
 
-.introducao h1{
+.introducao h1 {
     color: white;
     font-size: 48px;
     line-height: 60px;
     letter-spacing: .1em;
     font-weight: bold;
-    text-transform: uppercase;  
+    text-transform: uppercase;
     margin-bottom: 40px;
 }
 
- .quote_externo p:before, .quote_externo p:after{
+.quote_externo p:before, .quote_externo p:after {
     content: "";
     background-color: white;
     width: 50px;
@@ -98,23 +135,184 @@ p{
     margin: 10px auto;
 }
 
-.quote_externo{
-    margin-bottom: 40px;
-}
-
-.quote_externo p{
-    font-style: italic;
-    color: white;
+.quote_externo {
     margin: 0 auto;
-    width: 300px;   
+    margin-bottom: 40px;
+    color: white;
+    width: 300px;
     padding: 10px;
 }
 
-.quote_externo cite{
+.quote_externo p {
+    font-style: italic;
+}
+
+.quote_externo cite {
     color: white;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: .1em;
     font-style: normal;
-  
+}
+
+/* Peixes */
+
+.peixe_lista h3 {
+    background-color: #161c2e;
+    padding: 20px;
+    text-align: center;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: white;
+    font-weight: bold;
+    letter-spacing: .1em;
+}
+
+.peixe_lista h3:after {
+    content: "";
+    width: 50px;
+    height: 3px;
+    background-color: white;
+    display: block;
+    margin: 10px auto;
+}
+
+.call {
+    padding: 40px;
+    clear: both;
+    text-align: center;
+    color: #161c2e;
+}
+
+.call p {
+    padding-bottom: 20px;
+}
+
+/* Portfólio */
+
+.portfolio {
+    width: 100%;
+    background-color: #161c2e;
+}
+
+.portfolio li:last-child {
+    margin-top: 20px;
+}
+
+.portfolio p {
+    color: white;
+}
+
+/*qualidade */
+
+.qualidade img {
+    margin: 0 auto;
+}
+
+.qualidade:after {
+    background-image: url("../img/linhas.png");
+    position: absolute;
+    content: "";
+    display: block;
+    width: 620px;
+    height: 103px;
+    top: 210px;
+    right: 170px;
+}
+
+.qualidade ul {
+    padding: 40px 0;
+    text-align: center;
+}
+
+.qualidade ul li {
+    padding-right: 17px;
+    padding-left: 10px;
+}
+
+.qualidade h3 {
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+}
+
+.qualidade h3:after {
+    content: "";
+    width: 50px;
+    height: 3px;
+    background-color: #161c2e;
+    display: block;
+    margin: 6px auto 10px auto;
+}
+
+/* quebra */
+
+.quebra {
+    width: 100%;
+    background: url("../img/bg-quebra.jpg") no-repeat center;
+    background-size: cover;
+    height: 300px;
+    text-align: center;
+    padding-top: 80px;
+}
+
+.quebra.quote_externo {
+    max-width: 400px;
+    
+}
+
+/* footer */
+
+.footer{
+    width: 100%;
+    background-color: #161c2e;
+    padding-top: 40px;
+    color: white;
+    
+}
+
+.footer h3{
+    font-weight: bold;
+    text-transform: uppercase;
+   
+}
+
+.footer h3:after{
+    width: 50px;
+    height: 3px;
+    background-color: white;
+    content: "";
+    display: block;
+    margin: 10px 0px 12px;
+    text-align: left;
+}
+
+.nossa_historia p{
+    margin-right: 40px;
+}
+
+.contato ul li{
+    padding-bottom: 10px;
+}
+
+.redes_sociais ul li{
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.redes_sociais ul li a{
+    border: 3px solid #2bb3c0;
+    display: block;
+    padding: 10px;
+}
+
+.redes_sociais ul li a:hover{
+    border-color: white;
+    transition: all .5s ease;
+}
+
+.copy{
+    background-color: #2bb3c0;
+    padding: 20px 0;
+    width: 100%;
 }
