--- a/css/style-raw.css
+++ b/css/style-raw.css
@@ -76,6 +76,14 @@ p {
     color: #2bb3c0;
 }
 
+ ul li a.menu_ativo{
+    color: #2bb3c0;
+}
+
+ul li a.menu_ativo:hover{
+    color: white;
+}
+
 .subtitulo {
     font-size: 24px;
     line-height: 30px;
@@ -104,6 +112,24 @@ p {
     background-color: white;
 }
 
+.subtitulo-interno{
+    font-size: 24px;
+    font-weight: bold;
+    color: #161c2e;
+    text-transform: uppercase;
+    line-height: 25px;
+    letter-spacing: .1em;
+    padding-top: 60px;
+}
+
+.subtitulo-interno:after{
+    content:"";
+    width: 50px;
+    height: 3px;
+    background-color:#161c2e;
+    display: block;
+    margin: 8px auto;
+}
 /* Introdução */
 
 .introducao {
@@ -113,7 +139,7 @@ p {
     background-size: cover;
     margin-top: 96px;
     height: 420px;
-    padding-top: 70px;
+    padding-top: 60px;
 }
 
 .introducao h1 {
@@ -124,6 +150,33 @@ p {
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 40px;
+}
+
+.introducao-interna{
+    text-align: center;
+}
+
+.introducao-interna h1{
+    font-size: 36px;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    margin-top: 60px;
+
+}
+
+.introducao-interna h1:after{
+    content: "";
+    width: 50px;
+    height: 3px;
+    background-color: white;
+    display: block;
+    margin: 8px auto 6px auto;
+}
+
+.introducao-interna p{
+    color: white;
 }
 
 .quote_externo p:before, .quote_externo p:after {
@@ -266,9 +319,8 @@ p {
 .footer{
     width: 100%;
     background-color: #161c2e;
-    padding-top: 40px;
     color: white;
-    
+    padding-top: 40px;
 }
 
 .footer h3{
@@ -289,6 +341,7 @@ p {
 
 .nossa_historia p{
     margin-right: 40px;
+    padding-bottom: 40px;
 }
 
 .contato ul li{
