--- a/css/style-raw.css
+++ b/css/style-raw.css
@@ -54,6 +54,7 @@ p {
 
 .menu {
     text-align: right;
+    margin: 0 auto;
 }
 
 .menu ul li {
@@ -76,11 +77,11 @@ p {
     color: #2bb3c0;
 }
 
- ul li a.menu_ativo{
+ul li a.menu_ativo {
     color: #2bb3c0;
 }
 
-ul li a.menu_ativo:hover{
+ul li a.menu_ativo:hover {
     color: white;
 }
 
@@ -112,7 +113,7 @@ ul li a.menu_ativo:hover{
     background-color: white;
 }
 
-.subtitulo-interno{
+.subtitulo-interno {
     font-size: 24px;
     font-weight: bold;
     color: #161c2e;
@@ -122,14 +123,15 @@ ul li a.menu_ativo:hover{
     padding-top: 60px;
 }
 
-.subtitulo-interno:after{
-    content:"";
+.subtitulo-interno:after {
+    content: "";
     width: 50px;
     height: 3px;
-    background-color:#161c2e;
+    background-color: #161c2e;
     display: block;
     margin: 8px auto;
 }
+
 /* Introdução */
 
 .introducao {
@@ -152,21 +154,20 @@ ul li a.menu_ativo:hover{
     margin-bottom: 40px;
 }
 
-.introducao-interna{
+.introducao-interna {
     text-align: center;
 }
 
-.introducao-interna h1{
+.introducao-interna h1 {
     font-size: 36px;
     letter-spacing: .1em;
     text-transform: uppercase;
     font-weight: bold;
     color: white;
     margin-top: 60px;
-
 }
 
-.introducao-interna h1:after{
+.introducao-interna h1:after {
     content: "";
     width: 50px;
     height: 3px;
@@ -175,7 +176,7 @@ ul li a.menu_ativo:hover{
     margin: 8px auto 6px auto;
 }
 
-.introducao-interna p{
+.introducao-interna p {
     color: white;
 }
 
@@ -311,25 +312,23 @@ ul li a.menu_ativo:hover{
 
 .quebra.quote_externo {
     max-width: 400px;
-    
 }
 
 /* footer */
 
-.footer{
+.footer {
     width: 100%;
     background-color: #161c2e;
     color: white;
     padding-top: 40px;
 }
 
-.footer h3{
+.footer h3 {
     font-weight: bold;
     text-transform: uppercase;
-   
 }
 
-.footer h3:after{
+.footer h3:after {
     width: 50px;
     height: 3px;
     background-color: white;
@@ -339,32 +338,32 @@ ul li a.menu_ativo:hover{
     text-align: left;
 }
 
-.nossa_historia p{
+.nossa_historia p {
     margin-right: 40px;
     padding-bottom: 40px;
 }
 
-.contato ul li{
+.contato ul li {
     padding-bottom: 10px;
 }
 
-.redes_sociais ul li{
+.redes_sociais ul li {
     display: inline-block;
     margin-right: 10px;
 }
 
-.redes_sociais ul li a{
+.redes_sociais ul li a {
     border: 3px solid #2bb3c0;
     display: block;
     padding: 10px;
 }
 
-.redes_sociais ul li a:hover{
+.redes_sociais ul li a:hover {
     border-color: white;
     transition: all .5s ease;
 }
 
-.copy{
+.copy {
     background-color: #2bb3c0;
     padding: 20px 0;
     width: 100%;
