--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -182,6 +182,12 @@
         background: url("../img/portfolio/bg-portfolio-mobile2.jpg") no-repeat center;
         margin-top: 0;
     }
+
+    .portfolio-lista li div{
+        margin: 0 0 20px 0;
+    }
+
+
     .portfolio-lista li div img{
         margin: 0 0 20px 0;
     }
